added nrepl and tests and cleaned up files